--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
             "@testing-library/jest-dom": "^5.16.4",
             "@testing-library/react": "^13.2.0",
             "@testing-library/user-event": "^13.5.0",
+            "moment": "^2.29.3",
             "react": "^17.0.2",
             "react-big-calendar": "^0.40.1",
+            "react-datetime-picker": "^3.5.0",
             "react-dom": "^17.0.2",
+            "react-modal": "^3.15.1",
             "react-router-dom": "^5.3.0",
             "react-scripts": "5.0.1",
+            "sweetalert2": "^11.4.14",
             "web-vitals": "^2.1.4"
       },
       "scripts": {
